--- a/app/views/halls/_hall.slim
+++ b/app/views/halls/_hall.slim
@@ -1,4 +1,4 @@
-.row
+.row.hall data-id="#{hall.id}" data-next_id="#{@next_id}" data-previous_id="#{@previous_id}"
   .col-sm-12.text-center = hall.name
 - if hall.icon?
   .row
