--- a/app/views/concerts/index.html.slim
+++ b/app/views/concerts/index.html.slim
@@ -1,7 +1,4 @@
-= paginate @concerts, theme: 'twitter-bootstrap-4'
-.row
-  .col-sm-6
-    = render @concerts
-  .col-sm-6.map
-    #map data-array="#{@map_data}"
-= paginate @concerts, theme: 'twitter-bootstrap-4'
+.row: .col-sm-12
+  = render 'more'
+  /.col-sm-6.map
+  /  #map data-array="#{@map_data}"
