--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -1,8 +1,8 @@
 doctype html
-html lang="ru"
+html lang='ru'
   head
-    meta charset="UTF-8"
-    meta name="viewport" content="width=device-width, maximum-scale=1"
+    meta charset='UTF-8'
+    meta name='viewport' content='width=device-width, maximum-scale=1'
     title= page_title
     = yield :meta
     = csrf_meta_tags
@@ -19,9 +19,9 @@ html lang="ru"
     .no-js-error.alert.alert-error
       | К сожалению, в вашем браузере отключен JavaScript
       span Включите его, чтобы зайти на сайт
-      a class="btn-transparent" target="_blank" href="https://yandex.ru/support/common/browsers-settings/browsers-java-js-settings.xml" Включить JavaScript
+      a class='btn-transparent' target='_blank' href='https://yandex.ru/support/common/browsers-settings/browsers-java-js-settings.xml' Включить JavaScript
 
-    .container
+    .container.page-data data-controller="#{params[:controller]}"
       = yield
     #footer
       = render 'blocks/footer'
