try to fix login facebook

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -22,7 +22,7 @@ html lang='ru'
       a class='btn-transparent' target='_blank' href='https://yandex.ru/support/common/browsers-settings/browsers-java-js-settings.xml' Включить JavaScript
 
     .container.page-data data-controller="#{params[:controller]}"
-      = render 'shared.messages'
+      = render 'shared/messages'
       = yield
     #footer
       = render 'blocks/footer'
