--- a/app/views/concerts/show.html.slim
+++ b/app/views/concerts/show.html.slim
@@ -1,2 +1,2 @@
 #map data-array="#{[@concert.hall.to_map.merge({name: @concert.hall.name})].to_json}"
-= render @concert
+= render @concert, full: true
