--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -21,7 +21,7 @@ html lang='ru'
       span Включите его, чтобы зайти на сайт
       a class='btn-transparent' target='_blank' href='https://yandex.ru/support/common/browsers-settings/browsers-java-js-settings.xml' Включить JavaScript
 
-    .container.page-data data-controller="#{params[:controller]}"
+    .container.page-data data-controller="#{params[:controller]}" data-action="#{params[:action]}"
       = render 'shared/messages'
       = yield
     #footer
