--- a/app/views/blocks/_header.slim
+++ b/app/views/blocks/_header.slim
@@ -1,3 +1,8 @@
 - menu_slug = user_signed_in? ? ( current_user.role == 'admin' ? :adminus : :common ) : :unauthorized
 = render_navigation &navigation(menu_slug)
+.dropdown
+  button.btn.btn-secondary.dropdown-toggle#dropdownMenuButton type="button" data-toggle='dropdown' aria-haspopup="true" aria-expanded="false" Пользователи
+  .dropdown-menu
+    - User.find_each do |user|
+      = link_to user.name, decisions_path(user.slug, :go), class: 'dropdown-item'
 
