--- a/app/views/visits/_navbar.slim
+++ b/app/views/visits/_navbar.slim
@@ -3,8 +3,9 @@ nav.navbar.sticky-top.bg-faded.navbar-toggleable-sm
     i.fa.fa-users
   button.navbar-toggler.navbar-toggler-right data-toggle="collapse" data-target="#navbar-visit"
     i.fa.fa-bars
-  span.navbar-brand.navbar-toggler style="opacity: 0" Костыль
   .container-fluid
+    .hidden-sm-down
+      = render_navigation &navigation(@menu_slug)
     .hidden-md-up: .collapse.navbar-collapse#navbar-users: ul.navbar-nav
       - User.find_each do |user|
         li.nav-item
@@ -12,13 +13,14 @@ nav.navbar.sticky-top.bg-faded.navbar-toggleable-sm
             class: 'nav-link'
     .collapse.navbar-collapse#navbar-visit
       ul.nav.nav-tabs.flex-column.flex-md-row.justify-content-center
-        - Visit.aasm.states.map(&:name).map(&:to_s).each do |tab|
-          li.nav-item
-            = link_to I18n.t('activerecord.attributes.visit.aasm_state.'+ tab),\
-              url_for(state: tab), \
-              class: 'nav-link' + (tab == params[:state] ? ' active' : '')
-/        hr.hidden-md-up
-        /- Menu.find_by(slug: @menu_slug).pages.each do |page|
-          /li.nav-item.hidden-md-up
-            /= link_to page.name, page.fullpath, class: 'nav-link'
+        - if @visit_navbar
+          - Visit.aasm.states.map(&:name).map(&:to_s).each do |tab|
+            li.nav-item
+              = link_to I18n.t('activerecord.attributes.visit.aasm_state.'+ tab),\
+                url_for(state: tab), \
+                class: 'nav-link' + (tab == params[:state] ? ' active' : '')
+        hr.hidden-md-up
+        - Menu.find_by(slug: @menu_slug).pages.each do |page|
+          li.nav-item.hidden-md-up
+            = link_to page.name, page.fullpath, class: 'nav-link'
 
