--- a/app/views/concerts/_concert.slim
+++ b/app/views/concerts/_concert.slim
@@ -1,9 +1,9 @@
 .card
   .row.justify-content-center data-id="#{concert.id}" *next_prev(concert)
-    = link_to l(concert.date, format: :long), concert, class: 'col-sm-2 text-center'
-    = link_to concert.hall.name, concert.hall, class: 'col-sm-2 text-center'
-    = link_to 'Смотреть на сайте', concert.url, class: 'col-sm-2 text-center',\
-        target: '_blank'
+    - kls = 'col-12 col-sm-4 col-lg-2 text-center py-3'
+    = link_to l(concert.date, format: :long), concert, class: kls
+    = link_to concert.hall.name, concert.hall, class: kls
+    = link_to 'Смотреть на сайте', concert.url, class: kls, target: '_blank'
   - if concert.image?
     .row: .col-sm-12.text-center
       = image_tag concert.image, class: 'img-fluid'
