--- a/app/views/visits/_control.slim
+++ b/app/views/visits/_control.slim
@@ -1,15 +1,13 @@
-.row: .col-sm-12.text-center
-  .row.justify-content-center
-    - decis = t("activerecord.attributes.visit.aasm_state.#{my_visit.aasm_state}")
-    .col-sm-2.text-center
-      = link_to decis, decision_path(my_visit)
-    .col-sm-2.text-center
-      = link_to 'Поделиться в ВК', share_vk(decision_url(my_visit)), target: '_blank'
-    .col-sm-2.text-center
-      = link_to "Все мои решения «#{decis}»", decisions_path(current_user.slug, my_visit.aasm_state)
+.row: .col-12.text-center
+  - decis = t("activerecord.attributes.visit.aasm_state.#{my_visit.aasm_state}")
+  - lkc = {class: 'badge badge-light m-3'}
+  = link_to decis, decision_path(my_visit), lkc
+  = link_to 'Поделиться в ВК', share_vk(decision_url(my_visit)), {target: '_blank'}.merge(lkc)
+  = link_to "Все мои решения «#{decis}»", decisions_path(current_user.slug, my_visit.aasm_state), lkc
   .row.justify-content-center
     - events = local_assigns[:full] ? my_visit.aasm.events : my_visit.event_short_list
-    - events.each do |event|
-      .col-sm-3.col-xs-6: .card: .card-block: button.btn.btn-info.aasm data-event=event.name data-id=my_visit.id
-        = t("activerecord.attributes.visit.event.#{event.name}")
+    - events.each_with_index do |event, i|
+      .col-md.py-3.text-center class="#{i==0? 'col-12' : 'col'}"
+        button.btn.btn-lg.border.btn-info.aasm data-event=event.name data-id=my_visit.id
+          = t("activerecord.attributes.visit.event.#{event.name}")
 
