--- a/app/views/blocks/_header.slim
+++ b/app/views/blocks/_header.slim
@@ -1,6 +1,6 @@
 - @menu_slug = user_signed_in? ? ( current_user.role == 'admin' ? :adminus : :common ) : :unauthorized
 - @menu = Menu.find_by(slug: @menu_slug)
-nav.navbar.navbar-expand-md
+nav.navbar.navbar-expand-md.navbar-default.navbar-fixed-top: .container
   button.navbar-toggler data-toggle="collapse" data-target="#menu"
     i.fa.fa-bars.fa-2x
   button.navbar-toggler.navbar-toggler-right data-toggle="collapse" data-target="#users"
